feat: ws logic & UI

--- a/miniprogram/pages/socket/index.wxml
+++ b/miniprogram/pages/socket/index.wxml
@@ -1,2 +1,36 @@
 <!--miniprogram/pages/socket/index.wxml-->
-<text>miniprogram/pages/socket/index.wxml</text>
+<view class="wrapper">
+  <view wx:if="{{ showQuestionOption }}" class="question-selection">
+    <view class="selection-title">
+      可一次选择多个要练习的知识点，点击页面下方的“提交”,系统将推荐练习题目
+    </view>
+      <checkbox-group bindchange="checkboxChange">
+        <view wx:for="{{ chapters }}" wx:key="index">
+          <label>
+            <view style="background-color:{{item.checked ? '#4cb0f9':'#94D0FB'}}; color:{{item.checked ? '#0880d7':'#fff'}}">
+              <checkbox hidden value="{{item.chapter}}" checked="{{item.checked}}"></checkbox>
+              <text>{{item.chapter}}</text>
+            </view>
+          </label>
+        </view>
+      </checkbox-group>
+      <button bindtap='selectQuesOption'>提交</button>
+  </view>
+  <view wx:else class="question-wrapper">
+    <view class="desc-wrapper">
+      <import src="/towxml/entry.wxml"/>
+      <template is="entry" data="{{...question.ask}}"/>
+    </view>
+    <view class="answer-wrapper">
+      <view
+        wx:for="{{ question.answer}}"
+        wx:key="index"
+        data-index="{{ index }}"
+        bindtap="answer"
+        class="answer"
+        style="color: {{ (isChoosed && choiceIndex === index) ? (item.right ? 'yellow' : 'blue') : '' }}">
+        {{ item.answer }} 
+      </view>
+    </view>
+  </view>
+</view>
