--- a/miniprogram/pages/socket/analysis/index.wxss
+++ b/miniprogram/pages/socket/analysis/index.wxss
@@ -1,3 +1,39 @@
 /* miniprogram/pages/socket/analysis/index.wxss */
 @import '/towxml/style/main_min.wxss';
 @import '/towxml/style/theme/min.wxss';
+
+.question {
+  background: #6A84E3;
+  text-align: left;
+  color: #fff;
+  font-size: 37rpx;
+  padding: 20rpx;
+}
+
+.desc {
+  margin-top: 30rpx;
+}
+
+.choice{
+  font-size: 35rpx;
+  font-weight: 400;
+}
+
+.analysis {
+  padding: 50rpx;
+  font-size: 37rpx;
+}
+
+.next-wrapper {
+  margin-top: 50rpx;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.next-wrapper .next {
+  background: #6A84E3;
+  padding: 20rpx 60rpx;
+  color: white;
+  border-radius: 64rpx;
+  margin: 10rpx;
+}
