--- a/miniprogram/pages/socket/index.wxss
+++ b/miniprogram/pages/socket/index.wxss
@@ -9,6 +9,35 @@ page {
   height: 100%;
 }
 
+.question-selection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.question-selection .title {
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 40rpx;
+  padding: 80rpx 0 80rpx;
+}
+
+.question-selection .chapter {
+  width: 580rpx;
+  height: 80rpx;
+  margin-bottom: 25rpx;
+  line-height: 80rpx;
+  font-size:18px;
+  text-align: center;
+  border-radius: 10rpx;
+}
+
+.question-selection .submit {
+  width: 580rpx;
+  font-size: 20px;
+  margin-top: 20rpx;
+}
+
 .question-wrapper {
   height: 100%;
   display: flex;
@@ -43,4 +72,16 @@ page {
   justify-content: center;
   padding:0rpx 25rpx;
   font-size: 34rpx;
+}
+
+.right {
+  /*选择正确的答案颜色*/
+  background: #72CB6F;
+  color: #fff;
+}
+
+.error {
+  /*选择错误的答案颜色*/
+  background: #F5675D;
+  color: #fff;
 }
