--- a/miniprogram/pages/learning/spark/spark.wxml
+++ b/miniprogram/pages/learning/spark/spark.wxml
@@ -4,7 +4,7 @@
     <scroll-view scroll-y style="height:{{winHeight - 120}}px">
       <view class='content'>
         <view class="kind-list">
-          <block wx:for="{{itemss}}" wx:for-item='chapter' wx:key="{{chapter.id}}">
+          <block wx:for="{{items}}" wx:for-item='chapter' wx:key="{{chapter.id}}">
             <view class="kind-list-item">
               <view id="{{chapter.id}}" class="kind-list-item-hd {{chapter.open ? 'kind-list-item-hd-show' : ''}}" bindtap="kindToggle">
                 <view class="kind-list-text">{{chapter.name}}</view>
@@ -12,7 +12,7 @@
               <view class="kind-list-item-bd {{chapter.open ? 'kind-list-item-bd-show' : ''}}">
                 <view class="navigator-box {{chapter.open ? 'navigator-box-show' : ''}}">
                   <block wx:for="{{chapter.children}}" wx:for-item='unit' wx:key="*item" wx:for-index='index'>
-                    <navigator url="./sparkDetail/sparkDetail?chapterId={{chapter.id}}&nameId={{index+1}}&chapter={{chapter.name}}&name={{unit}}" class="navigator">
+                    <navigator url="./detail/detail?chapterId={{chapter.id}}&nameId={{index+1}}&chapter={{chapter.name}}&name={{unit}}" class="navigator">
                       <view class="navigator-text">{{unit}}</view>
                       <view class="navigator-arrow"></view>
                     </navigator>
