--- a/miniprogram/components/header/header.wxml
+++ b/miniprogram/components/header/header.wxml
@@ -1,3 +1,3 @@
 <view>
-  <image src='/images/header.png' class='header'></image>
+  <image style="margin: 0; padding: 0" src='/images/header.svg' class='seed-header'></image>
 </view>
