--- a/miniprogram/pages/questions/index.wxss
+++ b/miniprogram/pages/questions/index.wxss
@@ -1,6 +1,8 @@
 /* miniprogram/pages/socket/index.wxss */
 @import '/towxml/style/main_min.wxss';
 @import '/towxml/style/theme/min.wxss';
+/**主题配色**/
+@import '/towxml/style/theme/light.wxss';
 page {
   height: 100%;
 }
@@ -18,8 +20,8 @@ page {
 .question-selection .title {
   text-align: center;
   font-size: 16px;
-  margin-bottom: 40rpx;
-  padding: 80rpx 0 80rpx;
+  margin-bottom: 20rpx;
+  padding: 40rpx 0 40rpx;
 }
 
 .question-selection .chapter {
@@ -52,6 +54,16 @@ page {
   overflow-y: scroll;
   display: flex;
   align-items: center;
+}
+
+.no-question {
+  width: 650rpx;
+  flex: 1;
+  overflow-y: scroll;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  justify-content: center;
 }
 
 .answer-wrapper {
