--- a/miniprogram/pages/project/project.wxml
+++ b/miniprogram/pages/project/project.wxml
@@ -1,18 +1,1 @@
-<view class='device' style='height: {{ winHeight*ratio}}rpx'>
-  <header></header>
-  <view class='program'>
-  <scroll-view scroll-y style="height:{{winHeight - 150}}px">
-    <view class='content'>
-      <view wx:for="{{programs}}" wx:key="program" class='box' bindtap='jumpToDetail' data-id='{{item.id}}'>
-        <image src='{{item.img}}' class='software'></image>
-        <view class='text'>
-          <view class='title'>{{item.title}}</view>
-          <view class='subtitle'>
-            <text>{{item.subtitle}}</text>
-          </view>
-        </view>
-      </view>
-    </view>
-  </scroll-view>
-  </view>
-</view>
+<programs-portal programs="{{ programs }}"></programs-portal>
