--- a/miniprogram/pages/questions/index.wxss
+++ b/miniprogram/pages/questions/index.wxss
@@ -52,6 +52,7 @@ page {
   width: 650rpx;
   flex: 1;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   display: flex;
   align-items: center;
 }
