--- a/miniprogram/pages/project/project.wxss
+++ b/miniprogram/pages/project/project.wxss
@@ -1,76 +1,4 @@
-.device{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+page {
   height: 100%;
   background: #F2F2F2;
-}
-
-.content{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.content_no_permission{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding-top: 20rpx;
-}
-
-.box{
-    background: #FFFFFF;
-    width: 650rpx;
-    height: 250rpx;
-    /*width:650rpx;
-    height: 250rpx;*/
-    border-radius: 20rpx;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20rpx 20rpx; 
-    margin-bottom: 50rpx;
-}
-
-.software{
-  width:220rpx;
-  height:240rpx;
-}
-
-.hardware{
-  width:180rpx;
-  height:200rpx;
-  margin-left:25rpx;
-}
-
-.rank{
-  width:240rpx;
-  height:260rpx;
-}
-
-.program{
-  margin-top: 50rpx;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  
-}
-
-.text{
-  width: 390rpx;
-  margin-left:40rpx;
-  align-self:flex-start;
-  margin-top:30rpx;
-}
-
-.subtitle{
-  font-size:16px;
-  margin-top:30rpx;
-  color:#888888;
 }
